# OPENAPPBUILDER

./: .replit  AB_start.bat  APP_builder.py  APP_builder.py.txt  AppBuilder.spec  BUILD_INSTRUCTIONS.txt  START.bat  ai_functions.py  browser_automation.py  build.py  config.py  constants.py  grok_automation_config.json  handlers.py  main.py  pyproject.toml  replit.md  utils.py  views.py
